add DOMAIN env var to example env file

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ DB_PORT=
 DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=adonis
+DOMAIN=APPLICATION FULL URL, e.g http://example.com
 # goes right after https://maps.googleapis.com/maps/api/
 # replace PUT-YOUR-KEY-HERE with an actual API key
 GOOGLE_MAPS_KEY=js?key=PUT-YOUR-KEY-HERE
